--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>Backlogger — Backtesting Game</title>
     <meta name="description" content="Gamified backtesting with money-focused progression, ranks, and achievements." />
+    <meta name="theme-color" content="#0b0f14" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Modern game-like pairing: Orbitron (titles) + Inter (UI) -->
