--- a/index.html
+++ b/index.html
@@ -44,25 +44,10 @@
               <h2>Trader Level</h2>
               <span class="level-name" id="levelName">Novice</span>
             </header>
-            <div class="level-track">
-              <div class="level-step" data-label="Novice"></div>
-              <div class="level-step" data-label="Apprentice"></div>
-              <div class="level-step" data-label="Consistent"></div>
-              <div class="level-step" data-label="Professional"></div>
-              <div class="level-step" data-label="Elite"></div>
-              <div class="level-step" data-label="Master"></div>
-              <div class="level-step legend" data-label="Legend"></div>
-              <div class="level-progress" id="levelProgress" style="width: 8%"></div>
+            <div class="level-track" id="levelTrack">
+              <div class="level-progress" id="levelProgress" style="width: 0%"></div>
             </div>
-            <footer class="level-legend">
-              <span class="legend-dot novice"></span> Novice
-              <span class="legend-dot apprentice"></span> Apprentice
-              <span class="legend-dot consistent"></span> Consistent
-              <span class="legend-dot professional"></span> Professional
-              <span class="legend-dot elite"></span> Elite
-              <span class="legend-dot master"></span> Master
-              <span class="legend-dot legend"></span> Legend
-            </footer>
+            <div class="next-level muted" id="nextLevel">Next: Apprentice</div>
           </article>
 
           <article class="card balance-card">
