--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </header>
             <div class="level-track" id="levelTrack">
               <div class="level-progress" id="levelProgress" style="width: 0%"></div>
+              <div class="level-next-marker" id="nextLevelMarker" aria-hidden="true"></div>
             </div>
             <div class="next-level muted" id="nextLevel">Next: Apprentice</div>
           </article>
