UI: move next-level dot to label below bar; remove in-track marker; show 'Next level: · <name>'

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
             </header>
             <div class="level-track" id="levelTrack">
               <div class="level-progress" id="levelProgress" style="width: 0%"></div>
-              <div class="level-next-marker" id="nextLevelMarker" aria-hidden="true"></div>
             </div>
-            <div class="next-level muted" id="nextLevel">Next: Apprentice</div>
+            <div class="next-level muted" id="nextLevel">Next level: <span class="nl-dot" aria-hidden="true"></span><span id="nextLevelName">Apprentice</span></div>
           </article>
 
           <article class="card balance-card">
