--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
                 <option>GBPUSD</option>
                 <option>NAS100</option>
               </select>
+              <input type="date" id="weekStart" />
               <button id="startChallenge" class="primary">Start</button>
             </div>
+            <p class="muted" style="margin-top:8px; font-size:12px">Pick any date; the week runs Monday → Friday from that week.</p>
           </article>
         </div>
       </section>
@@ -143,7 +145,13 @@
           </header>
           <div class="row">
             <div class="pill blue" id="challengeInfo">No active challenge</div>
-            <button class="secondary" id="endWeek">End Week & Report</button>
+            <button class="secondary" id="endWeek" disabled>End Week & Report</button>
+          </div>
+          <div class="day-track" id="dayTrack" aria-label="Trading days Monday to Friday"></div>
+          <div class="row" style="justify-content: space-between; margin-top:8px;">
+            <button class="secondary" id="markNoTrade" disabled>Mark No Trade Today</button>
+            <div class="pill" id="dailySummary">Today: 0 trades • P/L $0</div>
+            <button class="secondary" id="nextDay" disabled>Next Day</button>
           </div>
           <div class="logger">
             <h3>Log Trade</h3>
@@ -165,10 +173,17 @@
                 <label>Notes <input type="text" name="notes" placeholder="Why this trade?"></label>
               </div>
               <div class="form-row">
-                <label>
-                  <input type="checkbox" name="ruleFollowed" checked>
-                  Followed rules
-                </label>
+                <label><input type="checkbox" name="ruleStrategy" checked> Strategy rules</label>
+                <label><input type="checkbox" name="ruleTradeMgmt" checked> Trade management</label>
+                <label><input type="checkbox" name="ruleRiskMgmt" checked> Risk management</label>
+              </div>
+              <div class="form-row">
+                <label><input type="checkbox" name="rulePlan" checked> Trading plan</label>
+                <div></div>
+                <div></div>
+              </div>
+              <div class="form-row">
+                <label></label>
                 <button class="primary" type="submit">Add Trade</button>
               </div>
             </form>
