UX: Weekly Challenge layout — full-width date + Start button, better mobile flow; update helper text

--- a/index.html
+++ b/index.html
@@ -129,10 +129,14 @@
                 <option>GBPUSD</option>
                 <option>NAS100</option>
               </select>
-              <input type="date" id="weekStart" />
-              <button id="startChallenge" class="primary">Start</button>
             </div>
-            <p class="muted" style="margin-top:8px; font-size:12px">Pick any date; the week runs Monday → Friday from that week.</p>
+            <div class="row">
+              <input type="date" id="weekStart" class="full" />
+            </div>
+            <div class="row">
+              <button id="startChallenge" class="primary full">Start</button>
+            </div>
+            <p class="muted" style="margin-top:8px; font-size:12px">Pick any date (match your chart). The week runs Monday–Friday from that week.</p>
           </article>
         </div>
       </section>
