UX: add mobile-friendly date hint overlay for week picker; hide on value/focus

--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
               </select>
             </div>
             <div class="row">
-              <input type="date" id="weekStart" class="full" />
+              <div class="input-wrap full">
+                <input type="date" id="weekStart" class="full" />
+                <span class="input-hint">Select date</span>
+              </div>
             </div>
             <div class="row">
               <button id="startChallenge" class="primary full">Start</button>
