UX: align current-day and Next Day sizes; add spacing; mobile edge-to-edge layout for day controls

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <button class="secondary small" id="endWeek" style="display:none">End Week & Report</button>
             </div>
           </div>
-          <div class="row">
+          <div class="row daily-row">
             <div class="pill small" id="dailySummary">Today: 0 trades • P/L $0</div>
           </div>
           <div class="logger">
