--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <button class="nav-btn" data-view="challenge">Challenge</button>
         <button class="nav-btn" data-view="log">Trade Log</button>
         <button class="nav-btn" data-view="records">Records</button>
-        <button class="nav-btn" data-view="settings">Settings</button>
       </nav>
       <div class="user">
         <div class="rank-badge" id="rankBadge">
           <span class="rank-title">Novice</span>
         </div>
         <div class="balance" id="topBalance">$10,000</div>
+        <button class="icon-btn" id="settingsBtn" title="Settings" aria-label="Open Settings" type="button">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path d="M12 8.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm9.44 3.06-1.77-.3a7.28 7.28 0 0 0-.62-1.49l1.05-1.46a.75.75 0 0 0-.1-.97l-1.6-1.6a.75.75 0 0 0-.97-.1l-1.46 1.05c-.48-.26-.98-.47-1.5-.62l-.3-1.77A.75.75 0 0 0 12.5 2h-2a.75.75 0 0 0-.74.62l-.3 1.77c-.52.15-1.02.36-1.5.62L6.5 3.96a.75.75 0 0 0-.97.1l-1.6 1.6a.75.75 0 0 0-.1.97l1.05 1.46c-.26.48-.47.98-.62 1.5l-1.77.3A.75.75 0 0 0 2 11.5v2c0 .36.26.67.62.74l1.77.3c.15.52.36 1.02.62 1.5L3.96 17.5a.75.75 0 0 0 .1.97l1.6 1.6c.24.24.62.28.9.1l1.46-1.05c.48.26.98.47 1.5.62l.3 1.77c.07.36.38.62.74.62h2c.36 0 .67-.26.74-.62l.3-1.77c.52-.15 1.02-.36 1.5-.62l1.46 1.05c.28.18.66.14.9-.1l1.6-1.6c.24-.24.28-.62.1-.9l-1.05-1.46c.26-.48.47-.98.62-1.5l1.77-.3c.36-.07.62-.38.62-.74v-2a.75.75 0 0 0-.62-.74Z"/>
+          </svg>
+        </button>
       </div>
     </header>
 
