Desktop optimization: wider layout, denser grids, shortcut legend, keyboard shortcuts

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
     <footer class="app-footer">
       <span>Backlogger • Backtesting-as-a-Game</span>
-      <span>v0.1.0</span>
+  <span>v0.1.0 • Shortcuts: Alt+1..4 Views · Ctrl+Enter Add Trade · Ctrl+Right Next Day · Ctrl+Shift+S Start</span>
     </footer>
 
     <script src="./src/app.js" type="module"></script>
