--- a/index.html
+++ b/index.html
@@ -170,17 +170,20 @@
             <h3>Log Trade</h3>
             <form id="tradeForm">
               <div class="form-row">
-                <label>Entry <input type="number" step="0.0001" name="entry" required></label>
-                <label>Stop <input type="number" step="0.0001" name="stop" required></label>
-                <label>Exit <input type="number" step="0.0001" name="exit" required></label>
+                <label>Entry price <input type="number" step="0.0001" name="entry" placeholder="e.g. 1950.25" required></label>
+                <label>Stop loss <input type="number" step="0.0001" name="stop" placeholder="protect level" required></label>
+                <label>Take profit 1 <input type="number" step="0.0001" name="exit1" placeholder="1R / 2R area" required></label>
+                <label>Take profit 2 <input type="number" step="0.0001" name="exit2" placeholder="runner / final" required></label>
               </div>
               <div class="form-row">
                 <label>Risk % <input type="number" step="0.1" name="riskPct" value="1" required></label>
-                <label>Grade
+                <label>Trade quality
                   <select name="grade">
-                    <option>A</option>
+                    <option>A+</option>
                     <option>B</option>
                     <option>C</option>
+                    <option>C+</option>
+                    <option>D-</option>
                   </select>
                 </label>
                 <label>Notes <input type="text" name="notes" placeholder="Why this trade?"></label>
