Runner BE support: weighted R calc, checkbox UI, enhanced R tooltips

--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
                 </label>
                 <label>Notes <input type="text" name="notes" placeholder="Why this trade?"></label>
               </div>
+              <div class="form-row" style="grid-template-columns: repeat(4, 1fr);">
+                <label style="align-self:end; font-size:11px; opacity:0.85;">Runner BE?
+                  <input type="checkbox" name="runnerBE" value="1" style="margin-top:6px; height:auto;" />
+                </label>
+              </div>
               <div class="rules-card">
                 <div class="rules-title">Trade Rules</div>
                 <div class="rules-list">
