--- a/index.html
+++ b/index.html
@@ -173,10 +173,14 @@
                 <label>Entry price <input type="number" step="0.0001" name="entry" placeholder="e.g. 1950.25" required></label>
                 <label>Stop loss <input type="number" step="0.0001" name="stop" placeholder="protect level" required></label>
                 <label>Take profit 1 <input type="number" step="0.0001" name="exit1" placeholder="1R / 2R area" required></label>
-                <label>Take profit 2 <input type="number" step="0.0001" name="exit2" placeholder="runner / final" required></label>
+                <label>Take profit 2 <input type="number" step="0.0001" name="exit2" placeholder="runner / final (optional)"></label>
               </div>
               <div class="form-row">
+                <label>First scale % <input type="number" name="scalePct" value="50" min="1" max="99" step="1"></label>
+                <label>Peak favorable price <input type="number" step="0.0001" name="peak" placeholder="optional"></label>
                 <label>Risk % <input type="number" step="0.1" name="riskPct" value="1" required></label>
+              </div>
+              <div class="form-row">
                 <label>Trade quality
                   <select name="grade">
                     <option>A+</option>
