Diagnostics: tick size setting + tick-based R metrics & tooltip

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
           <div class="form-row">
             <label>Starting Balance <input type="number" id="startingBalance" value="10000" /></label>
             <label>Base Risk % <input type="number" id="baseRisk" value="1" step="0.1" /></label>
+            <label>Tick Size <input type="number" id="tickSize" value="0" step="0.0001" /></label>
             <button class="secondary" id="saveSettings">Save</button>
           </div>
         </article>
